assets/css/main.sass
---
---
@import "variables"

@import "bourbon/bourbon"
@import "base/base"
@import "neat/neat"

@import "navigation"
@import "profile"
@import "posts"

.left
  float: left
.right
  float: right

html
  img
    max-height: 400px
    height: auto

  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
  background-color: #fdfdfd
  h1,h2,h3,h4,h5,h6
    color: $pink
    &.subheader
      font-weight: normal
  body
    @media screen and (min-width: 768px)
      margin-left: 0
      margin-right: 0
  a
    &.selected
      font-weight: bold
    color: $gray
    &:hover
      color: $pink

  i.image-caption
    display: block
    font-size: 0.75em
    text-align: center
    width: 100%
    margin: 1em 0 2em 0
  .box
    @include outer-container
    margin-bottom: 1rem
    .title, .content
      @include span-columns(9 of 9)

    @media screen and (min-width: 768px)
      &.half
        @include span-columns(4.5 of 9)
      .title
        @include span-columns(3 of 9)
      .content
        @include span-columns(6 of 9)
    a
      color: $pink
    h1
      margin-bottom: 1rem
    border: solid 1px $light-gray
    padding: 1rem
    .language
      font-weight: lighter
      color: $gray
      font-size: 0.75em

  .project-image
    border: solid 1px $gray
  .horizontal-gallery
    display: flex
    overflow: auto
    margin: 1em calc(50% - 50vw)
    justify-content: center

  section.main, article.post
    @include outer-container
    @include span-columns(10)
    @include shift(1)
    @media screen and (min-width: 768px)
      @include span-columns(9)
      @include shift(1.5)

  footer
    @include outer-container
    @include span-columns(10)
    @include shift(1)

    @media screen and (min-width: 768px)
      @include span-columns(9)
      @include shift(1.5)
    p
      margin-bottom: 2rem
      &.small
        display: inline-block
        font-size: 0.75em
      &.light
        font-weight: light
        color: $light-gray

